--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Assets\Scripts\StringUtil.cs" />
     <Compile Include="Assets\Scripts\Util\UtilFile.cs" />
     <Compile Include="Assets\Scripts\YamlClassDefine.cs" />
+    <None Include="Assets\Resources\DataRes\spriteData.txt" />
     <None Include="Assets\Resources\DataRes\TileAssetData.txt" />
     <None Include="Assets\Resources\DataRes\sceneData.txt" />
     <None Include="Assets\Resources\DataRes\SmallTileMapData.txt" />
