添加tsx的类，并且序列化实验

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Assets\Scripts\SpriteClassDefine.cs" />
     <Compile Include="Assets\Scripts\StringUtil.cs" />
     <Compile Include="Assets\Scripts\TileEditorTmx.cs" />
+    <Compile Include="Assets\Scripts\TileEditorTsx.cs" />
     <Compile Include="Assets\Scripts\Util\UtilFile.cs" />
     <Compile Include="Assets\Scripts\YamlClassDefine.cs" />
     <None Include="Assets\Resources\DataRes\spriteData.txt" />
